--- a/Server/AuokkaAdmin/web.config
+++ b/Server/AuokkaAdmin/web.config
@@ -2,16 +2,23 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
-      <modules>
+      <modules runAllManagedModulesForAllRequests="true">
         <remove name="WebDAVModule" />
       </modules>
       <handlers>
         <remove name="WebDAV" />
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+        <!-- <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" /> -->
       </handlers>
       <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout">
         <environmentVariables />
       </aspNetCore>
+      <httpProtocol>
+        <customHeaders>
+          <add name="Access-Control-Allow-Origin" value="*" />
+          <add name="Access-Control-Allow-Headers" value="Content-Type" />
+          <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        </customHeaders>
+      </httpProtocol>
     </system.webServer>
   </location>
 </configuration>
